<resources>
    <string name="app_name">GoRun</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_app_id">com.example.jp.a14_04</string>
    <string name="prevRun">Previous Runs</string>
    <string name="newRun">New Run</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="lat_lng_default">0.000</string>
    <string name="run_id">Run ID: </string>
    <string name="run_name">Run Name: </string>
    <string name="date">Date: </string>
    <string name="start_time">Start Time: </string>
    <string name="average_speed">Avg. Speed: </string>
    <string name="distance">Distance: </string>
    <string name="duration">Duration: </string>
    <string name="logo">logo</string>
    <string name="instruction">Click or just GO RUN</string>
    <string name="no_runs_message">You have no stored runs... GoRun!</string>
    <string name="previous_runs">Previous Runs</string>


</resources>
